api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  replicas: 2  # 원하는 만큼 스케일링 가능
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: daev681/daev681:api-gateway  # 빌드된 Docker 이미지 이름
          imagePullPolicy: Always  # 강제로 이미지 다운로드
          ports:
            - containerPort: 5000  # Go 애플리케이션이 열어놓은 포트
      imagePullSecrets:
        - name: my-secret  # 시크릿 이름을 여기에 지정
