api-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  labels:
    app: api-server
spec:
  replicas: 2  # 원하는 만큼 스케일링 가능
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
        - name: api-server
          image: daev681/daev681:api-server  # 빌드된 Docker 이미지 이름
          imagePullPolicy: Always  # 강제로 이미지 다운로드
          ports:
            - containerPort: 8080  # 애플리케이션이 열어놓은 포트
      imagePullSecrets:
        - name: my-secret  # 시크릿 이름을 여기에 지정
