api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 80  # 외부에서 접근할 포트
      targetPort: 5000  # Pod 내부 포트
  type: ClusterIP  # 외부 노출 없이 클러스터 내에서만 접근 가능
