react-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx   # 이 줄을 추가합니다.
  rules:
  - host: www.daev681.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-nginx-service
            port:
              number: 80
